# pygidSIM

./: LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py
.github/workflows/: test.yml
pygidsim/: directions.py  experiment.py  export_database.py  giwaxs_sim.py  int_sim.py  q_sim.py
tests/: README.md  conftest.py  test_cif.py  test_compatibility.py  test_crystal.py  test_sglattice.py
tests/test_data/: MAPbI3.cif
