[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygidsim"
version = "0.1.5"
description = "Simulation of wide-angle grazing-incidence diffraction patterns"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Mikhail Romodin" }]
dependencies = [
    "numpy>=1.24.4",
    "xrayutilities==1.7.10",
    "scipy>=1.10.1",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "pytest-html>=3.1.0",
    "pytest-benchmark>=4.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-mock>=3.10.0",
    "pytest-html>=3.1.0",
    "pytest-benchmark>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/mlgid-project/pygidSIM"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["pygidsim*"]

[tool.setuptools.package-data]
pygidsim = ["data/*"]
